--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ranythingllm
 Type: Package
 Title: R Interface for 'Anything LLM'
-Version: 0.2.0
+Version: 0.0.1
 Author: Bangyou Zheng
 Maintainer: Bangyou Zheng <Bangyou.Zheng@csiro.au>
 Description: 'Anything LLM' <https://useanything.com/> is the all-in-one Desktop & Docker AI application with full RAG and AI Agent capabilities. 'ranythingllm' is a R interface of 'Anything LLM'.
@@ -12,7 +12,7 @@ URL: https://ranythingllm.bangyou.me/, https://github.com/byzheng/ranythingllm, 
 BugReports: https://github.com/byzheng/ranythingllm/issues
 Imports:
    settings,
-   httr
+   httr2
 RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
