--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ URL: https://ranythingllm.bangyou.me/, https://github.com/byzheng/ranythingllm, 
 BugReports: https://github.com/byzheng/ranythingllm/issues
 Imports:
    settings,
-   httr2
+   httr2,
+   curl
 RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
