Add more functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,7 @@ export(document)
 export(document_remove)
 export(documents)
 export(documents_raw_text)
+export(workspace)
+export(workspace_delete)
+export(workspace_new)
+export(workspaces)
