--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ BugReports: https://github.com/byzheng/ranythingllm/issues
 Imports:
    settings,
    httr2,
-   curl
+   curl,
+   purrr
 RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
