--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(document)
 export(document_remove)
 export(documents)
 export(documents_raw_text)
+export(embeddings)
 export(move_files)
 export(workspace)
 export(workspace_delete)
